--- a/w4d1/Nick Vizzutti Recipe.html
+++ b/w4d1/Nick Vizzutti Recipe.html
@@ -4,7 +4,7 @@
     <title>Nick Vizzutti Recipe</title>
     <meta name="description" content="Homemade Stir Fry">
  <meta charset="utf-8">
-<link rel="stylesheet" href="./Nick Vizzutti Recipe_files/nick_stir_fry.css" type="text/css">
+<link rel="stylesheet" href="nick_stir_fry.css" type="text/css" media="screen" />
 <script src="Nick Vizzutti Recipe_files/external_javascript_example.js" type="text/javascript"></script>
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -15,15 +15,9 @@
       ga('send', 'pageview');
   </script>
     </head><body>
+ <h1>The Best Stir Fry</h1>
 
-      <u style="
-    font-size: small;
-    align-content: center;
-">  <h1>The Best Stir Fry</h1></u>
-
-        <h2 style="
-    align-self: center;
-">Thin Noodles and Chicken/Beef</h2>
+<h2>Thin Noodles and Chicken/Beef<h2>
       <section>
         <p>This is a recipe for Stir Fry with Noodles and Chicken.<br> You may
           add whatever vegetables you like, but I defintely recommend brocolli, <br>
